correções nos testes unitarios da US14
