# backend/src/controllers/transport.controller.ts
@@ -18,10 +18,25 @@ export class TransportController {
     }
   }
 
+  async updateTransport(req: Request, res: Response, next: NextFunction) {
+    try {
+      const id = parseInt(req.params.id);
+      if (isNaN(id)) throw new BadRequestError('Invalid transport id');
+
+      const data = UpdateTransportSchema.parse(req.body);
+      const updated = await this.service.updateTransport(id, data);
+      if (!updated) throw new NotFoundError('Transport not found');
+      res.status(200).json(updated);
+    } catch (error) {
+      next(error);
+    }
+  }
+
   async getTransportById(req: Request, res: Response, next: NextFunction) {
     try {
       const id = parseInt(req.params.id);
       if (isNaN(id)) throw new BadRequestError('Invalid transport id');
+
       const transport = await this.service.getTransportById(id);
       if (!transport) throw new NotFoundError('Transport not found');
       res.status(200).json(transport);
@@ -39,26 +54,14 @@ export class TransportController {
     }
   }
 
-  async updateTransport(req: Request, res: Response, next: NextFunction) {
-    try {
-      const id = parseInt(req.params.id);
-      if (isNaN(id)) throw new BadRequestError('Invalid transport id');
-      const data = UpdateTransportSchema.parse(req.body);
-      const updated = await this.service.updateTransport(id, data);
-      if (!updated) throw new NotFoundError('Transport not found');
-      res.status(200).json(updated);
-    } catch (error) {
-      next(error);
-    }
-  }
-
   async deleteTransport(req: Request, res: Response, next: NextFunction) {
     try {
       const id = parseInt(req.params.id);
       if (isNaN(id)) throw new BadRequestError('Invalid transport id');
+
       const deleted = await this.service.deleteTransport(id);
       if (!deleted) throw new NotFoundError('Transport not found');
-      res.status(204).json({ message: 'Transporte deletado com sucesso.' });
+      res.status(204).end();
     } catch (error) {
       next(error);
     }
